--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -9,12 +9,35 @@ html {
   display: flex;
   flex-direction: column;
   /* align-items: center; */
+  text-align: center;
   justify-content: center;
   font-size: calc(10px + 3vmin);
   font-family: sans-serif;
   color: white;
 }
 
+.App-Component {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1024px;
+  width: 100%;
+}
+
+.Hero-Background {
+  background-color: #EBE9FA;
+  border-top: solid;
+  border-top-color: #A6A8CE;
+  min-height: 500px;
+}
+
 .Values-Team-Background {
   background-image: linear-gradient(#9292C9, #E0CBE8, #9F93C1);
+  background-size: 100vw !important;
+}
+
+@media screen and (max-width: 1024px) {
+  .Nav-Component {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
